--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
