--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@aws-sdk/client-s3": "^3.678.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.19.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
