--- a/package.json
+++ b/package.json
@@ -17,21 +17,29 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@aws-sdk/client-s3": "^3.678.0",
+    "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.19.0",
+    "@tanstack/react-query": "^5.59.16",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
+    "langchain": "^0.3.4",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
+    "next-nprogress-bar": "^2.3.14",
+    "nextjs-progressbar": "^0.0.16",
+    "nextjs-toploader": "^3.7.15",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
@@ -51,6 +59,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
