--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@aws-sdk/client-s3": "^3.678.0",
+    "@google/generative-ai": "^0.21.0",
+    "@langchain/community": "^0.3.10",
+    "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-icons": "^1.3.0",
@@ -34,11 +37,13 @@
     "geist": "^1.3.0",
     "langchain": "^0.3.4",
     "lucide-react": "^0.453.0",
+    "md5": "^2.3.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "next-nprogress-bar": "^2.3.14",
     "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^3.7.15",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
@@ -51,6 +56,7 @@
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.3"
@@ -58,6 +64,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.14.10",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.3",
