--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.54",
     "@auth/prisma-adapter": "^1.6.0",
     "@aws-sdk/client-s3": "^3.678.0",
     "@google/generative-ai": "^0.21.0",
@@ -28,6 +29,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.16",
+    "ai": "^3.4.21",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -55,6 +57,7 @@
     "react-toastify": "^10.0.6",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
+    "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
