--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth/prisma-adapter": "^1.6.0",
     "@aws-sdk/client-s3": "^3.678.0",
     "@google/generative-ai": "^0.21.0",
+    "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.10",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^4.0.0",
@@ -26,10 +27,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.47.12",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.16",
     "ai": "^3.4.21",
+    "appwrite": "^16.1.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -40,9 +43,12 @@
     "langchain": "^0.3.4",
     "lucide-react": "^0.453.0",
     "md5": "^2.3.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^11.17.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "next-nprogress-bar": "^2.3.14",
+    "next-themes": "^0.4.4",
     "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^3.7.15",
     "openai-edge": "^1.2.2",
@@ -62,7 +68,8 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.3"
+    "uuid": "^11.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
