--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -51,6 +53,7 @@
     "next-themes": "^0.4.4",
     "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^3.7.15",
+    "node-appwrite": "^14.1.0",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
@@ -66,7 +69,6 @@
     "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.5",
     "zod": "^3.23.8"
@@ -88,6 +90,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
