--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.10",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.14.0",
