--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,27 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+NEXTAUTH_SECRET="your_auth_secret_here"  
+NEXTAUTH_URL="http://localhost:3000"  
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+DATABASE_URL="postgresql://postgres:password@localhost:5432/Database"  
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+GITHUB_CLIENT_ID="your_github_client_id"  
+GITHUB_CLIENT_SECRET="your_github_client_secret"  
 
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/ai-pdf-reader"
+GOOGLE_CLIENT_ID="your_google_client_id"  
+GOOGLE_CLIENT_SECRET="your_google_client_secret"  
 
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
+GEMINI_API_KEY="your_gemini_api_key"
+GOOGLE_GENERATIVE_AI_API_KEY="your_gemini_api_key"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+PINECONE_API_KEY=""
+
+APPWRITE_SECRET_KEY=""
+NEXT_PUBLIC_APPWRITE_PROJECT_ID=""
+NEXT_PUBLIC_APPWRITE_BUCKET_ID=""
+
+STRIPE_SECRET_KEY="your_stripe_secret_key"  
+STRIPE_PUBLISHABLE_KEY="your_stripe_publishable_key"  
+STRIPE_WEBHOOK_SECRET="your_stripe_webhook_secret"  
+
+NODE_ENV="development"  
+NEXT_PUBLIC_APP_URL="http://localhost:3000"  
+
