--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.54",
+    "@ai-sdk/groq": "^3.0.4",
+    "@ai-sdk/provider-utils": "^4",
+    "@ai-sdk/react": "^3.0.14",
     "@auth/prisma-adapter": "^1.6.0",
     "@aws-sdk/client-s3": "^3.678.0",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
+    "@huggingface/inference": "^4.13.5",
     "@langchain/community": "^0.3.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@pinecone-database/doc-splitter": "^0.0.1",
@@ -37,7 +41,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.16",
-    "ai": "^3.4.21",
+    "ai": "^6.0.14",
     "appwrite": "^16.1.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
@@ -50,6 +54,7 @@
     "lucide-react": "^0.453.0",
     "md5": "^2.3.0",
     "mini-svg-data-uri": "^1.4.4",
+    "ml-pca": "^4.1.1",
     "motion": "^11.17.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
@@ -75,7 +80,7 @@
     "tailwind-scrollbar": "^3.1.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.5",
-    "zod": "^3.23.8",
+    "zod": "^3.25.76",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
