--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.16",
-    "ai": "^6.0.14",
+    "ai": "^6.0.24",
     "appwrite": "^16.1.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
@@ -63,6 +63,7 @@
     "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^3.7.15",
     "node-appwrite": "^14.1.0",
+    "openai": "^6.15.0",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
